<resources>
    <string name="app_name">CS2340C_Team40</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="intro_message">Click Start to begin</string>
    <string name="start_game">Start Game</string>
    <string name="exit_game">Exit Game</string>
    <string name="end_game">End Game</string>
    <string name="health_display">Health:</string>
    <string name="sprite_image_description">Sprite</string>
    <string name="display_name">Name</string>
    <string name="proceed_to_game">Proceed to Game</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="Hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="sprite_1">Sprite 1</string>
    <string name="sprite_2">Sprite 2</string>
    <string name="sprite_3">Sprite 3</string>
    <string name="next">Next</string>
    <string name="timerFinish">Temporary timer 0</string>
    <string name="score_display">30</string>
    <string name="score">Score:</string>
    <string name="sprite">\n</string>
    <string name="end">End</string>
    <string name="restart">Restart</string>
    <string name="choose_difficulty">Choose Your Difficulty</string>
    <string name="choose_your_sprite">Choose your sprite</string>
    <string name="you_won">You Won!</string>
    <string name="you_lose">You Lose!</string>
    <string name="restart_game">Restart Game</string>
    <string name="Score_PowerUp" />
    <string name="Health_PowerUp" />
    <string name="Damage_PowerUp" />
    <string name="health">Health</string>
    <string name="Score">Score</string>
</resources>