<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background = "@drawable/room3"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="9"
        android:gravity="center"
        />


    <Button
        android:id="@+id/NextRoom3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/restart" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".View.Room1"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/display_player_name_text"
            android:layout_width="224dp"
            android:layout_height="61dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="text"
            android:focusable="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/health_text_word"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/health_text_word"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:autofillHints="health"
            android:ems="10"
            android:hint="@string/health_display"
            android:inputType="text"
            android:text="@string/health"
            android:textColor="#FFFFFF"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            />

        <EditText
            android:id="@+id/health_text"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text"
            android:text="@string/score_display"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/health_text_word"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/score_text"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/score_display"
            android:textColor="#FFFFFF"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/display_player_name_text"
            app:layout_constraintStart_toEndOf="@+id/score_text_word"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/score_text_word"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/score"
            android:textColor="#FFFFFF"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/display_player_name_text"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/spriteImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/sprite_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

        <ImageView
            android:id="@+id/sprite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="116dp"
            android:contentDescription="@string/sprite"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />



        <ImageView
            android:id="@+id/ghost"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="388dp"
            android:contentDescription="@string/sprite"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/skull_v1_2" />

        <ImageView
            android:id="@+id/knight"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="432dp"
            android:contentDescription="@string/sprite"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.381"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/vampire_v2_2" />

        <ImageView
            android:id="@+id/speed_powerup"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="188dp"
            android:contentDescription="@string/Damage_PowerUp"
            android:src="@drawable/power_up_damage"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/health_powerup"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="280dp"
            android:contentDescription="@string/Health_PowerUp"
            android:src="@drawable/power_up_health"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>