<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MapStartScreen">

    <Button
        android:id="@+id/go_end_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:text="@string/end_game"
        app:layout_constraintBottom_toTopOf="@+id/display_player_name_text"
        app:layout_constraintEnd_toStartOf="@+id/display_player_name_text"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="@+id/display_player_name_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/display_player_name_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="218dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/display_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/display_health_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_end_screen_button"
        tools:text="(name)" />

    <EditText
        android:id="@+id/display_health_text"
        android:layout_width="116dp"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        android:autofillHints="health"
        android:ems="10"
        android:hint="@string/health_display"
        android:inputType="text"
        android:text="@string/health_display"
        app:layout_constraintBottom_toTopOf="@+id/spriteImageView"
        app:layout_constraintEnd_toEndOf="@+id/spriteImageView"
        app:layout_constraintTop_toBottomOf="@+id/display_player_name_text" />

    <ImageView
        android:id="@+id/spriteImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="244dp"
        android:contentDescription="@string/sprite_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_health_text"
        app:srcCompat="@drawable/bluepiskel" />

</androidx.constraintlayout.widget.ConstraintLayout>